// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyBlock' incorrectly implements interface 'Block'.
  Type 'MyBlock' is missing the following properties from type 'Block': transactions, hash, version, previousHash, and 5 more.

      2 |       import { Block } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyBlock implements Block {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`Block invalid "reference" 1`] = `
"snippetCode.ts (4,25): Builtin properties cannot be referenced

      2 |       import { Block } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Block['for'];
        |                         ^
      5 |     
"
`;

exports[`Block invalid reference - object 1`] = `
"snippetCode.ts (4,15): Builtin properties cannot be referenced

      2 |       import { Block } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const { for } = Block;
        |               ^
      5 |     
"
`;

exports[`Block invalid reference 1`] = `
"snippetCode.ts (4,25): Builtin properties cannot be referenced

      2 |       import { Block } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Block.for;
        |                         ^
      5 |     
"
`;
